@@ -1,3 +1,11 @@
+2017-10-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	Backport from mainline
+	2017-09-29  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
+	PR tree-optimization/82337
+	* gcc.c-torture/compile/pr82337.c: New file.
+
 2017-10-02  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* opt55.ad[sb]: Move to...
